move to JDK and JavaFX 25.